--- a/index.html
+++ b/index.html
@@ -6,183 +6,201 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Путешествия по России</title>
 </head>
-<body class="page">
-    <header class="header">
-        <a href="#" class="header__logo" title="Россия">
-            <img src="./images/header-logo.svg" class="header__logo-pic" alt="Логотип сайта (Путешествия по России)">
-        </a>
+<body>
+  <div class="page">
+    <header class="header page__header">
+            <img src="./images/header-logo.svg" class="header__logo" alt="Логотип сайта (Путешествия по России)">
         <ul class="header__lang">
-            <li>
+            <li class="header__list-item">
                 <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
             </li>
-            <li>
+            <li class="header__list-item">
                 <a href="#" class="header__lang-link">En</a>
             </li>
         </ul>
     </header>
-    <main>
-        <section class="lead">
+    <main class="content">
+        <section class="lead content__lead">
             <h1 class="lead__title">Путешествия по России</h1>
-            <p class="lead__subtitle">Настоящая страна не в выпусках новостей,&nbsp; а здесь.</p>
-        <div class="lead__container">
+            <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+        <figure class="lead__container">
             <img class="lead__image" src="./images/lead-polka.jpg" alt="Карта от Пскова до Улан-Удэ">
-            <p class="lead__caption">ваша полка - верхняя</p>
-        </div>
+            <figcaption class="lead__caption">ваша&nbsp;полка&nbsp;—&nbsp;верхняя</figcaption>
+        </figure>
         </section>
-        <section class="intro">
-            <h2 class="intro__title">Чего мы там не видели?</h2>
+        <section class="intro content__intro">
+            <h2 class="intro__title">Чего мы там не&nbsp;видели?</h2>
             <p class="intro__text">
-                По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.
+              По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но&nbsp;только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без&nbsp;миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и&nbsp;проехала 20 тысяч километров по&nbsp;родной стране. Мы выбрали и&nbsp;описали некоторые интересные места, достойные вашего отпуска.
             </p>
             <ul class="intro__list">
-                <li>
-                    <p class="intro__list-item">Часовых поясов
+                <li class="intro__list-item">Часовых поясов&ensp;
                         <span class="intro__list-quantity">11</span>
-                    </p>
                 </li>
-                <li>
-                    <p class="intro__list-item">Объектов природного наследия ЮНЕСКО
+                <li class="intro__list-item">Объектов природного наследия ЮНЕСКО&ensp;
                         <span class="intro__list-quantity">12</span>
-                    </p>
                 </li>
-                <li>
-                    <p class="intro__list-item">Объектов культурного наследия ЮНЕСКО
+                <li class="intro__list-item">Объектов культурного наследия ЮНЕСКО&ensp;
                         <span class="intro__list-quantity">16</span>
-                    </p>
                 </li>
-                <li>
-                    <p class="intro__list-item">Природных заповедников
+                <li class="intro__list-item">Природных заповедников&ensp;
                         <span class="intro__list-quantity">105</span>
-                    </p>
                 </li>
-                <li>
-                    <p class="intro__list-item">Аэропортов
+                <li class="intro__list-item">Аэропортов&ensp;
                         <span class="intro__list-quantity">241</span>
-                    </p>
                 </li>
             </ul>
         </section>
-        <section class="photo-grid">
-            <img src="./images/photo-grid-train.jpg" alt="Вид из окна поезда на море" class="photo-grid__item">
-            <img src="./images/photo-grid-atharva-tulsi.jpg" alt="Вид на горы с высоты" class="photo-grid__item">
-            <img src="./images/photo-grid-tuman.jpg" alt="Собака на стоге сена" class="photo-grid__item">
-            <img src="./images/photo-grid-sochi.jpg" alt="Вид на туманный лес Сочи с высоты" class="photo-grid__item">
-            <img src="./images/photo-grid-arisa.jpg" alt="Колесо машины на фоне треснувшего льда" class="photo-grid__item">
-            <img src="./images/photo-grid-baikal.jpg" alt="Озеро Байкал на фоне гор" class="photo-grid__item">
-            <img src="./images/photo-grid-elbrus.jpg" alt="Заснеженные шапки горы Эльбрус" class="photo-grid__item">
-            <img src="./images/photo-grid-kondratiev.jpg" alt="Фото знака (пешеходный переход)" class="photo-grid__item">
-            <img src="./images/photo-grid-kamchatka-1.jpg" alt="Вид на горы Камчатки с высоты" class="photo-grid__item">
-            <img src="./images/photo-grid-kamchatka-2.jpg" alt="Вид на горы Камчатки и равнину" class="photo-grid__item">
-            <img src="./images/photo-grid-baikal-2.jpg" alt="Горы и озеро Байкал" class="photo-grid__item">
-            <img src="./images/photo-grid-ergaki.jpg" alt="Вид на горы в тумане" class="photo-grid__item">
+        <section class="photo-grid content__photo-grid">
+          <ul class="photo-grid__list">
+            <li>
+              <img src="./images/photo-grid-train.jpg" alt="Вид из окна поезда на море" class="photo-grid__item">
+            </li>
+            <li>
+              <img src="./images/photo-grid-atharva-tulsi.jpg" alt="Вид на горы с высоты" class="photo-grid__item">
+            </li>
+            <li>
+              <img src="./images/photo-grid-tuman.jpg" alt="Собака на стоге сена" class="photo-grid__item">
+            </li>
+            <li>
+              <img src="./images/photo-grid-sochi.jpg" alt="Вид на туманный лес Сочи с высоты" class="photo-grid__item">
+            </li>
+            <li>
+              <img src="./images/photo-grid-arisa.jpg" alt="Колесо машины на фоне треснувшего льда" class="photo-grid__item">
+            </li>
+            <li>
+              <img src="./images/photo-grid-baikal.jpg" alt="Озеро Байкал на фоне гор" class="photo-grid__item">
+            </li>
+            <li>
+              <img src="./images/photo-grid-elbrus.jpg" alt="Заснеженные шапки горы Эльбрус" class="photo-grid__item">
+            </li>
+            <li>
+              <img src="./images/photo-grid-kondratiev.jpg" alt="Фото знака (пешеходный переход)" class="photo-grid__item">
+            </li>
+            <li>
+              <img src="./images/photo-grid-kamchatka-1.jpg" alt="Вид на горы Камчатки с высоты" class="photo-grid__item">
+            </li>
+            <li>
+              <img src="./images/photo-grid-kamchatka-2.jpg" alt="Вид на горы Камчатки и равнину" class="photo-grid__item">
+            </li>
+            <li>
+              <img src="./images/photo-grid-baikal-2.jpg" alt="Горы и озеро Байкал" class="photo-grid__item">
+            </li>
+            <li>
+              <img src="./images/photo-grid-ergaki.jpg" alt="Вид на горы в тумане" class="photo-grid__item">
+            </li>
+          </ul>
         </section>
         <section class="places">
-            <article class="place">
+            <article class="place places__place">
                 <h2 class="place__title">Куршская коса</h2>
                 <div class="place__website">
                     <p class="place__url-heading">URL</p>
-                    <a class="place__link" href="http://park-kosa.ru" target="_blank" rel="noopener">park-kosa.ru</a>
+                    <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
                 </div>
                 <img src="./images/place-kosa.jpg" alt="Куршская коса" class="place__image">
+                <div>
                   <p class="place__paragraph">
-                    Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.
+                      Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на&nbsp;краю российского анклава.
                   </p>
                   <p class="place__paragraph">
-                    На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.
+                      На этом Калининградская область не заканчивается. Для&nbsp;путешественника и&nbsp;исследователя там же по&nbsp;соседству — самая западная точка России, Балтийская коса, — и&nbsp;немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в&nbsp;спокойствие природы и запах стального, прохладного моря.
                   </p>
+                </div>
             </article>
-            <article class="place">
+            <article class="place places__place">
                 <h2 class="place__title">Кольский</h2>
                 <div class="place__website">
                     <p class="place__url-heading">URL</p>
                     <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
                 </div>
                 <img src="./images/place-kolsky.jpg" class="place__image" alt="Кольский полуостров">
-
+                <div>
                     <p class="place__paragraph">
-                        Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.
+                        Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а&nbsp;на&nbsp;север — Ледовитый океан, прикидывающийся Баренцевым морем.
                     </p>
                     <p class="place__paragraph">
                         Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.
                     </p>
-
+                </div>
             </article>
-            <article class="place">
+            <article class="place places__place">
                 <h2 class="place__title">Алтай</h2>
                 <div class="place__website">
                     <p class="place__url-heading">URL</p>
                     <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
                 </div>
                 <img src="./images/place-altai.jpg" class="place__image" alt="Ноутбук на перилах на фоне леса Алтая">
-
+                <div>
                     <p class="place__paragraph">
-                        Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.
+                        Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А&nbsp;если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.
                     </p>
                     <p class="place__paragraph">
-                        Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.
+                        Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а&nbsp;на равнинах пасутся косули. И&nbsp;знаменитые манулы — тоже обитатели Алтайского края.
                     </p>
-
+                  </div>
             </article>
-            <article class="place">
+            <article class="place places__place">
                 <h2 class="place__title">Зимний Байкал</h2>
                 <div class="place__website">
                     <p class="place__url-heading">URL</p>
                     <a class="place__link" href="https://vk.com/baikalmile" target="_blank" rel="noopener">https://vk.com/baikalmile</a>
                  </div>
                  <img src="./images/place-winter-baikal.jpg" class="place__image" alt="Трещины в замерзшем озере Байкал">
-
+                  <div>
                     <p class="place__paragraph">
-                        Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.
+                        Всем известен Байкал как крупнейшее озеро&nbsp;в&nbsp;мире.&nbsp;Многие также знают, что это самый большой источник пресной воды и&nbsp;одно из красивейших мест в&nbsp;России.
                     </p>
                     <p class="place__paragraph">
-                        Конечно, это всё так. Но Байкал ещё идеальное место для  соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
+                        Конечно, это всё так. Но&nbsp;Байкал ещё идеальное место для соревнований по&nbsp;скийорингу. Это такой вид спорта, когда лыжник привязывает себя к&nbsp;мотоциклу,&nbsp;и&nbsp;тандем старается развить как можно бóльшую скорость на&nbsp;льду. В&nbsp;марте 2019 года на&nbsp;фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011&nbsp;км/ч.
                     </p>
-
+                  </div>
             </article>
-            <article class="place">
+            <article class="place places__place">
                 <h2 class="place__title">Карелия</h2>
                 <div class="place__website">
                     <p class="place__url-heading">URL</p>
                     <a class="place__link" href="http://vodlozero.ru/" target="_blank" rel="noopener">http://vodlozero</a>
                 </div>
                 <img src="./images/place-karelia.jpg" class="place__image" alt="Карелия">
+                <div>
                     <p class="place__paragraph">
                         Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
                     </p>
+                </div>
             </article>
         </section>
-        <section class="cover">
-            <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__overlay" target="_blank">
-              <div class="cover__background">
-                <h2 class="cover__title">До Байкала «на собаках»</h2>
+        <section class="cover content__cover">
+            <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__background" target="_blank">
+                <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
                 <p class="cover__subtitle">
-                По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
+                  По&nbsp;мотивам учебной темы о Транссибе — путешествие от&nbsp;столицы до Байкала на электричках.
                 </p>
-              </div>
             </a>
         </section>
     </main>
     <footer class="footer">
-        <nav class="footer__nav">
+        <nav>
             <ul class="footer__links">
-                <li class="footer__link">
+                <li class="footer__list-item">
                     <a href="https://yandex.ru/maps/" class="footer__link" target="_blank" title="Яндекс Карты">Карты</a>
                 </li>
-                <li class="footer__link">
+                <li class="footer__list-item">
                     <a href="https://yandex.ru/pogoda/" class="footer__link" target="_blank" title="Яндекс Погода">Погода</a>
                 </li>
-                <li class="footer__link">
+                <li class="footer__list-item">
                     <a href="https://rasp.yandex.ru/" class="footer__link" target="_blank" title="Яндекс Расписание">Расписание</a>
                 </li>
-                <li class="footer__link">
+                <li class="footer__list-item">
                     <a href="https://calendar.yandex.ru/" class="footer__link" target="_blank" title="Яндекс Календарь">Календарь</a>
                 </li>
-                <li class="footer__link">
+                <li class="footer__list-item">
                     <a href="https://travel.yandex.ru/" class="footer__link" target="_blank" title="Яндекс Путешествия">Путешествия</a>
                 </li>
             </ul>
         </nav>
-        <p class="footer__copyright">ⓒ2023. Кристина Бурдужа</p>
+        <p class="footer__copyright">&copy;2023.&nbsp;Кристина&nbsp;Бурдужа</p>
     </footer>
+  </div>
 </body>
 </html>
