Исправлены замечания 2го ревью

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     </p>
                   </div>
             </article>
-            <article class="place places__place">
+            <article class="place">
                 <h2 class="place__title">Карелия</h2>
                 <div class="place__website">
                     <p class="place__url-heading">URL</p>
