--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Путешествия по России</title>
 </head>
-<body>
-  <div class="page">
+<body class="page">
+  <div>
     <header class="header page__header">
             <img src="./images/header-logo.svg" class="header__logo" alt="Логотип сайта (Путешествия по России)">
         <ul class="header__lang">
